tests/fixtures/coflow/invalid/parse/class-field-missing-type.cf
class Weapon {
  id
  damage: int
}
